Add tags to settings

--- a/example/settings-template.html
+++ b/example/settings-template.html
@@ -91,7 +91,8 @@
             title: {
               '*': 'test',
               'en-US': 'test2'
-            }
+            },
+            tags: ['extra_tag', 'hello']
           },
           expanded: true,
           launcher: {
