--- a/example/new_ticketfields-template.html
+++ b/example/new_ticketfields-template.html
@@ -37,16 +37,18 @@
               "embed": "submitTicket",
               "props": {
                 color: 'red',
-                attachments: true,
-                customFields: [
-                  10002,
-                  10007,
-                  10012,
-                  10017,
-                  10022,
-                  10027,
-                  10032
-                ]
+                attachmentsEnabled: true,
+                customFields: {
+                  ids: [
+                    10002,
+                    10007,
+                    10012,
+                    10017,
+                    10022,
+                    10027,
+                    10032
+                  ]
+                }
               }
             },
             "launcher": {
