Fix view more in single iframe mode

--- a/example/singleIframe-template.html
+++ b/example/singleIframe-template.html
@@ -38,8 +38,7 @@
             "helpCenterForm": {
               "embed": "helpCenter",
               "props": {
-                "position": "right",
-                "viewMore": "true"
+                "position": "right"
               }
             },
             "launcher": {
