missed replacement in renderer

--- a/example/settings-template.html
+++ b/example/settings-template.html
@@ -82,7 +82,7 @@
               'fr': ':('
             }
           },
-          channelChoice: true,
+          contactOptions: true,
           chat: {
             suppress: false
           },
