single iframe switching between old and new chat based on arturo

--- a/example/singleIframe-oldChat-template.html
+++ b/example/singleIframe-oldChat-template.html
@@ -34,7 +34,7 @@
         zE.devRender({
           webWidgetCustomizations: true,
           singleIframe: true,
-          newChat: true,
+          newChat: false,
           embeds: {
             "helpCenterForm": {
               "embed": "helpCenter",
