--- a/example/channelchoice-template.html
+++ b/example/channelchoice-template.html
@@ -32,6 +32,7 @@
     <script>
       zE(function() {
         zE.devRender({
+          singleIframe: true,
           webWidgetCustomizations: true,
           embeds: {
             "launcher": {
