contactOptions is now an object

--- a/example/channelchoice-template.html
+++ b/example/channelchoice-template.html
@@ -59,7 +59,7 @@
 
       zESettings = {
         webWidget: {
-          contactOptions: true
+          contactOptions: { enabled: true }
         }
       };
     </script>
