updated contactOptions in settings-template

--- a/example/settings-template.html
+++ b/example/settings-template.html
@@ -82,7 +82,7 @@
               'fr': ':('
             }
           },
-          contactOptions: true,
+          contactOptions: { enabled: true },
           chat: {
             suppress: false
           },
