Add contactFormLabel option to channelchoice-template

--- a/example/channelchoice-template.html
+++ b/example/channelchoice-template.html
@@ -72,6 +72,10 @@
             chatLabelOffline: {
               '*': 'Thank you, come again',
               'en-US': 'No way, Jose'
+            },
+            contactFormLabel: {
+              '*': 'Leave us a message',
+              'en-US': 'PM us if you want'
             }
           }
         }
