--- a/example/new_chat-template.html
+++ b/example/new_chat-template.html
@@ -9,7 +9,7 @@
   </head>
 
   <body style='background-color:#fff'>
-    <h1>Single Iframe boom</h1>
+    <h1>New Chat boom</h1>
 
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tristique quis nisi a lobortis. Proin et malesuada orci, ut malesuada risus. Etiam eget tellus in est viverra aliquam vitae non felis. Vivamus vestibulum elit arcu. Vivamus a vehicula leo, id venenatis massa. Sed eget mi ultricies, ultricies sapien semper, porta nisl. Fusce accumsan risus a diam fermentum, ac consectetur erat pulvinar. Nulla vitae purus ac erat mollis feugiat.
@@ -33,7 +33,6 @@
       zE(function() {
         zE.devRender({
           webWidgetCustomizations: true,
-          singleIframe: true,
           newChat: true,
           embeds: {
             "helpCenterForm": {
