Add some consts for magic numbers, rename things to make them a bit clearer, add some tests for u-userLauncherColor

--- a/example/darkbackground-template.html
+++ b/example/darkbackground-template.html
@@ -48,7 +48,7 @@
       zESettings = {
         webWidget: {
           color: {
-            theme: colors[0]
+            theme: colors[Math.floor(Math.random() * colors.length)]
           }
         },
       };
