added example files for old and new snippet

--- a/example/asset_composer-template.html
+++ b/example/asset_composer-template.html
@@ -5,7 +5,7 @@
   <title>Asset Composer Test</title>
   <script>
     const domain = 'dev.zd-dev.com';
-    const key = 'a1b2c3';
+    const key = 'dev.zd-dev.com';
 
 		window.zE || (function(doc, script) {
 			// Create the zE global object. At this point
