--- a/example/channelchoice-template.html
+++ b/example/channelchoice-template.html
@@ -39,6 +39,10 @@
                 "position": "right"
               }
             },
+            "talk": {
+              "embed": "talk",
+              "props": {}
+            },
             "zopimChat": {
               "embed": "chat",
               "props": {
