--- a/example/composite-template.html
+++ b/example/composite-template.html
@@ -9,7 +9,7 @@
   </head>
 
   <body style='background-color:#fff'>
-    <h1>All three components boom</h1>
+    <h1>Every Embed boom</h1>
 
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tristique quis nisi a lobortis. Proin et malesuada orci, ut malesuada risus. Etiam eget tellus in est viverra aliquam vitae non felis. Vivamus vestibulum elit arcu. Vivamus a vehicula leo, id venenatis massa. Sed eget mi ultricies, ultricies sapien semper, porta nisl. Fusce accumsan risus a diam fermentum, ac consectetur erat pulvinar. Nulla vitae purus ac erat mollis feugiat.
@@ -33,6 +33,10 @@
       zE(function() {
         zE.devRender({
           embeds: {
+            "talk": {
+              "embed": "talk",
+              "props": {}
+            },
             "helpCenterForm": {
               "embed": "helpCenter",
               "props": {}
@@ -56,6 +60,14 @@
           }
         });
       });
+
+      zESettings = {
+        webWidget: {
+          contactOptions: {
+            enabled: true
+          }
+        }
+      }
     </script>
 
   </body>
