Add talk embed props to html example template

--- a/example/talk-template.html
+++ b/example/talk-template.html
@@ -12,7 +12,10 @@
           embeds: {
             "talk": {
               "embed": "talk",
-              "props": {}
+              "props": {
+                "group": "Support",
+                "serviceUrl": "http://talkintegration-pod999.zendesk-staging.com"
+              }
             },
             "launcher": {
               "embed": "launcher",
