Cleanup dev changes

--- a/example/talk-template.html
+++ b/example/talk-template.html
@@ -14,14 +14,15 @@
               "embed": "talk",
               "props": {
                 "group": "Support",
-                "serviceUrl": "http://talkintegration-pod999.zendesk-staging.com"
+                "serviceUrl": "http://talkintegration-pod999.zendesk-staging.com",
+                "color": "#000000"
               }
             },
             "launcher": {
               "embed": "launcher",
               "props": {
                 "position": "right",
-                "color": "#0000FF"
+                "color": "#000000"
               }
             }
           }
