Add extra fields to callback form and added a common field render file

--- a/example/talk-template.html
+++ b/example/talk-template.html
@@ -13,7 +13,7 @@
             "talk": {
               "embed": "talk",
               "props": {
-                "group": "Support",
+                "keyword": "Support",
                 "serviceUrl": "http://talkintegration-pod999.zendesk-staging.com",
                 "color": "#000000"
               }
