--- a/example/asset_composer-template.html
+++ b/example/asset_composer-template.html
@@ -4,38 +4,7 @@
   <meta charset="UTF-8">
   <title>Asset Composer Test</title>
   <script>
-    const domain = 'dev.zd-dev.com';
-    const key = 'dev.zd-dev.com';
-
-		window.zE || (function(doc, script) {
-			// Create the zE global object. At this point
-			// zE acts as a queue of functions to be invoked once the web widget
-			// has completed loading.
-			var z = zE = zEmbed = function() {
-				z._.push(arguments);
-			};
-
-			// Create a new script tag for the asset_composer.js and grab a
-			// reference to the first script element on the host page.
-			var $ = z.s = doc.createElement(script);
-			var el = doc.getElementsByTagName(script)[0];
-
-			z.set = function(o) {
-				z.set._.push(o)
-			};
-			z._ = [];
-			z.set._ = [];
-
-			// Set the properties for the script to load asset_composer.js.
-			$.async = false;
-			$.setAttribute("charset", "utf-8");
-			$.src = "https://" + domain + "/embed_key_registry/asset_composer.js?key=" + key;
-			z.t = +new Date;
-			$.type = "text/javascript";
-
-			// Insert the asset composer script so it is evaluated first.
-			el.parentNode.insertBefore($, el)
-	})(document, "script");
+window.zE||function(e,t,s){var n=zE=zEmbed=function(){n._.push(arguments)},a=n.s=e.createElement(t),r=e.getElementsByTagName(t)[0];n.set=function(e){n.set._.push(e)},n._=[],n.set._=[],a.async=!1,a.setAttribute("charset","utf-8"),a.src="https://dev.zd-dev.com/embed_key_registry/asset_composer.js?key="+s,n.t=+new Date,a.type="text/javascript",r.parentNode.insertBefore(a,r)}(document,"script",'376e5fdc-9f2f-4bf6-acd1-49b56efc8c3e');
   </script>
 
   <script>
