Update talk template to use HTTPS protocol and update PR template

--- a/example/talk-template.html
+++ b/example/talk-template.html
@@ -14,7 +14,7 @@
               "embed": "talk",
               "props": {
                 "keyword": "Support",
-                "serviceUrl": "http://talkintegration-pod999.zendesk-staging.com",
+                "serviceUrl": "https://talkintegration-pod999.zendesk-staging.com",
                 "color": "#000000"
               }
             },
