Update talk example template

--- a/example/talk-template.html
+++ b/example/talk-template.html
@@ -13,7 +13,7 @@
             "talk": {
               "embed": "talk",
               "props": {
-                "keyword": "Support",
+                "keyword": "hola",
                 "serviceUrl": "https://talkintegration-pod999.zendesk-staging.com",
                 "color": "#000000"
               }
