Clean up example files and replace the zopim id with the placeholder in all of them

--- a/example/channelchoice-template.html
+++ b/example/channelchoice-template.html
@@ -46,7 +46,7 @@
             "zopimChat": {
               "embed": "chat",
               "props": {
-                "zopimId": "3J5UeIXLz87ouiZpDFSjS3lXUv1r0tBa"
+                "zopimId": "{{zopimId}}"
               }
             },
             "ticketSubmissionForm": {
