--- a/example/nakedzopim-template.html
+++ b/example/nakedzopim-template.html
@@ -37,7 +37,7 @@
               "embed": "chat",
               "props": {
                 "standalone": true,
-                "zopimId": "29Oz5ZvpEoCfSk5IB69BV7sB7j1BIuJU"
+                "zopimId": "{{zopimId}}"
               }
             }
           }
