--- a/example/rtl-template.html
+++ b/example/rtl-template.html
@@ -41,7 +41,7 @@
             "zopimChat": {
               "embed": "chat",
               "props": {
-                "zopimId": "1yd3mzK15W13d2FIlQmXuuIGlYDs1JVT"
+                "zopimId": "{{zopimId}}"
               }
             },
             "ticketSubmissionForm": {
