--- a/example/chat-template.html
+++ b/example/chat-template.html
@@ -36,7 +36,7 @@
             "zopimChat": {
               "embed": "chat",
               "props": {
-                "zopimId": "29Oz5ZvpEoCfSk5IB69BV7sB7j1BIuJU"
+                "zopimId": "{{zopimId}}"
               }
             },
             "launcher": {
