--- a/example/index-template.html
+++ b/example/index-template.html
@@ -2,18 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Beacon example</title>
+    <title>Examples</title>
 </head>
 <body>
-  <h1>Example of embedding code</h1>
-  <p>Clicking the link will trigger a beacon call that will store among other things the time spent on this page.</p>
-  <a href="anotherpage.html">Another page</a>
-
-  <h2>Other Examples</h2>
+  <h2>Examples</h2>
   <ul>
-    <li><a href="launcher.html">Engagement Launcher</a></li>
-    <li><a href="chat.html">Chat</a></li>
+    <li><a href="launcher.html">Contact Form</a></li>
+    <li><a href="ticketfields.html">Ticket Fields</a></li>
+    <li><a href="ticketforms.html">Ticket Forms</a></li>
+    <li><a href="chat.html">Old Chat</a></li>
+    <li><a href="nakedzopim.html">Chat Standalone</a></li>
+    <li><a href="new_chat.html">New Chat</a></li>
     <li><a href="helpcenter.html">Help Center</a></li>
+    <li><a href="contextual.html">Contextual Help</a></li>
+    <li><a href="talk.html">Talk</a></li>
+    <li><a href="channelchoice.html">Channel Choice (Contact Options)</a></li>
+    <li><a href="composite.html">All Components</a></li>
+    <li><a href="local.html">Local</a></li>
+    <li><a href="webwidgetpreview.html">Web Widget Preview</a></li>
+    <li><a href="rtl.html">RTL</a></li>
+    <li><a href="darkbackground.html">Dark Background - Color</a></li>
   </ul>
 
   <script src="/dist/bootstrap.js" inline></script>
