--- a/example/settings-template.html
+++ b/example/settings-template.html
@@ -50,7 +50,7 @@
             "zopimChat": {
               "embed": "chat",
               "props": {
-                "zopimId": "2EkTn0An31opxOLXuGgRCy5nPnSNmpe6"
+                "zopimId": "{{zopimId}}"
               }
             },
             "ticketSubmissionForm": {
