Add talk variable to config files

--- a/example/composite-template.html
+++ b/example/composite-template.html
@@ -35,7 +35,10 @@
           embeds: {
             "talk": {
               "embed": "talk",
-              "props": {}
+              "props": {
+                "keyword": "{{talkKeyword}}",
+                "serviceUrl": "{{talkIntegration}}"
+              }
             },
             "helpCenterForm": {
               "embed": "helpCenter",
