--- a/example/talk-template.html
+++ b/example/talk-template.html
@@ -13,8 +13,8 @@
             "talk": {
               "embed": "talk",
               "props": {
-                "keyword": "hola",
-                "serviceUrl": "https://talkintegration-pod999.zendesk-staging.com",
+                "keyword": "{{talkKeyword}}",
+                "serviceUrl": "{{talkIntegration}}",
                 "color": "#000000"
               }
             },
