Add shared secret to watch environments and generate a jwt token in the example file from it

--- a/example/authenticate-template.html
+++ b/example/authenticate-template.html
@@ -35,7 +35,7 @@
 
     <script>
         window.zESettings = {
-          authenticate: { jwt: 'replace me with a valid jwt token' }
+          authenticate: { jwt: '{{jwt}}' }
         };
     </script>
 
