Update development scripts for ac widget

--- a/example/asset_composer-template.html
+++ b/example/asset_composer-template.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Asset Composer Test</title>
   <script>
-window.zE||function(e,t,s){var n=zE=zEmbed=function(){n._.push(arguments)},a=n.s=e.createElement(t),r=e.getElementsByTagName(t)[0];n.set=function(e){n.set._.push(e)},n._=[],n.set._=[],a.async=!1,a.setAttribute("charset","utf-8"),a.src="https://dev.zd-dev.com/embed_key_registry/asset_composer.js?key="+s,n.t=+new Date,a.type="text/javascript",r.parentNode.insertBefore(a,r)}(document,"script",'376e5fdc-9f2f-4bf6-acd1-49b56efc8c3e');
+window.zE||function(e,t,s){var n=zE=zEmbed=function(){n._.push(arguments)},a=n.s=e.createElement(t),r=e.getElementsByTagName(t)[0];n.set=function(e){n.set._.push(e)},n._=[],n.set._=[],a.async=!1,a.setAttribute("charset","utf-8"),a.src="https://dev.zd-dev.com/embed_key_registry/asset_composer.js?key="+s,n.t=+new Date,a.type="text/javascript",r.parentNode.insertBefore(a,r)}(document,"script",'{{zendeskHost}}');
   </script>
 
   <script>
