Use a newDesign value on config to show new designs instead of newChat

--- a/example/composite-template.html
+++ b/example/composite-template.html
@@ -32,6 +32,7 @@
     <script>
       zE(function() {
         zE.devRender({
+          newDesign: true,
           embeds: {
             "talk": {
               "embed": "talk",
@@ -75,4 +76,3 @@
 
   </body>
 </html>
-
