Rename all necessary instances of keyword to nickname

--- a/example/talk-template.html
+++ b/example/talk-template.html
@@ -13,7 +13,7 @@
             "talk": {
               "embed": "talk",
               "props": {
-                "keyword": "{{talkKeyword}}",
+                "nickname": "{{talkNickname}}",
                 "serviceUrl": "{{talkIntegration}}",
                 "color": "#000000"
               }
