--- a/example/composite-template.html
+++ b/example/composite-template.html
@@ -36,7 +36,7 @@
             "talk": {
               "embed": "talk",
               "props": {
-                "keyword": "{{talkKeyword}}",
+                "nickname": "{{talkNickname}}",
                 "serviceUrl": "{{talkIntegration}}"
               }
             },
