Fix dev experience for connect templates

--- a/example/outbound_no_hc-template.html
+++ b/example/outbound_no_hc-template.html
@@ -41,8 +41,7 @@
     }
 
     function showArticle() {
-      var articleId = 218994228;
-      zE.showIPMArticle(articleId);
+      zE.showIPMArticle({{articleId}});
     }
 
     function hideWidget() {
