--- a/example/outbound_no_config-template.html
+++ b/example/outbound_no_config-template.html
@@ -23,8 +23,7 @@
     }
 
     function showArticle() {
-      var articleId = 218994228;
-      zE.showIPMArticle(articleId);
+      zE.showIPMArticle({{articleId}});
     }
 
     function hideWidget() {
