For case where no config is available, use zESkipWebWidget in template

--- a/example/outbound_no_config-template.html
+++ b/example/outbound_no_config-template.html
@@ -5,6 +5,7 @@
   <title>Local Test</title>
   <script src="/dist/bootstrap.js" inline></script>
   <script>
+    window.zESkipWebWidget = true;
     zE(function() {
       zE.devRender({ ipmAllowed: true });
     });
