Rename zE to zEPreview for preview components

--- a/example/chatPreview-template.html
+++ b/example/chatPreview-template.html
@@ -32,7 +32,7 @@
 
     <script src="/dist/chatPreview.js"></script>
     <script>
-      window.preview = zE.renderPreview({
+      window.preview = zEPreview.renderPreview({
         element: document.getElementById('previewContainer')
       });
 
