Use watchConf var for google analytics id

--- a/example/ga_new-template.html
+++ b/example/ga_new-template.html
@@ -36,7 +36,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-103023081-1', 'auto');
+      ga('create', '{{GAId}}', 'auto');
       ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
@@ -48,7 +48,7 @@
             "zopimChat": {
               "embed": "chat",
               "props": {
-                "zopimId": "2EkTn0An31opxOLXuGgRCy5nPnSNmpe6"
+                "zopimId": "{{zopimId}}"
               }
             },
             "launcher": {
