--- a/example/ga_old-template.html
+++ b/example/ga_old-template.html
@@ -30,7 +30,7 @@
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-103023081-1']);
+      _gaq.push(['_setAccount', '{{GAId}}']);
       _gaq.push(['_trackPageview']);
 
       (function() {
@@ -49,7 +49,7 @@
             "zopimChat": {
               "embed": "chat",
               "props": {
-                "zopimId": "2EkTn0An31opxOLXuGgRCy5nPnSNmpe6"
+                "zopimId": "{{zopimId}}"
               }
             },
             "launcher": {
