Add analytics middleware with chat opened event

--- a/example/ga_new-template.html
+++ b/example/ga_new-template.html
@@ -44,6 +44,7 @@
     <script>
       zE(function() {
         zE.devRender({
+          newChat: true,
           "embeds" : {
             "zopimChat": {
               "embed": "chat",
