--- a/example/ga_old-template.html
+++ b/example/ga_old-template.html
@@ -45,6 +45,7 @@
     <script>
       zE(function() {
         zE.devRender({
+          newChat: true,
           "embeds" : {
             "zopimChat": {
               "embed": "chat",
