--- a/example/contextual-template.html
+++ b/example/contextual-template.html
@@ -29,7 +29,7 @@
     </p>
 
     <svg style="width:100%;height:100%;z-index:-1;position:absolute;top:0;left:0;">
-      <line id="zeLine" style="stroke:rgb(255,0,0);stroke-width:2" />
+      <rect id="zeBox" style="stroke:rgb(255,0,0);stroke-width:2" />
     </svg>
     <script src="/dist/bootstrap.js" inline></script>
 
